--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace, Hack",
-    "editor.fontSize": 14,
-    "editor.lineHeight": 0
+  "editor.fontFamily": "'Fira Code'",
+  "editor.fontSize": 14,
+  "editor.lineHeight": 0
 }
