--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.fontFamily": "'Fira Code'",
   "editor.fontSize": 14,
-  "editor.lineHeight": 0
+  "editor.lineHeight": 0,
+  "scm.inputFontFamily": "'Fira Code'"
 }
