--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.fontFamily": "'Fira Code'",
   "editor.fontSize": 14,
   "editor.lineHeight": 0,
-  "scm.inputFontFamily": "'Fira Code'"
+  "scm.inputFontFamily": "'Fira Code'",
+  "cSpell.words": ["addarith", "dsimp", "rcases", "symm", "ZMOD"]
 }
