--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "editor.fontSize": 14,
   "editor.lineHeight": 0,
   "scm.inputFontFamily": "'Fira Code'",
-  "cSpell.words": ["addarith", "dsimp", "rcases", "symm", "ZMOD"]
+  "cSpell.words": ["addarith", "dsimp", "Injective", "rcases", "symm", "ZMOD"]
 }
