--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /.lake/
 /.cache
 
-*.DS_Store
+**.DS_Store
 /.DS_Store
 **.DS_Store
 *.aux
@@ -16,3 +16,5 @@
 *.fdb_latexmk
 *.fls
 *.synctex(busy)
+*.png
+.DS_Store
